refactor: findReservationByRestaurant simplified using ReservationAssembler